# py-libs

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  BUILD  LICENSE  index.html  justfile  mkdocs.yml  mypy.ini  pants.toml  pre_docs.py  py-boot.yaml  pyproject.toml  pyproject_old.toml  readme.md  sitemap.xml
.github/: ci.yaml
_pants/: BUILD  (+3 more)
ask-shell/: .gitignore  .groups.yaml  CHANGELOG.md  index.html  pyproject.toml  readme.md
ask-shell/.changelog/: 028.yaml  029.yaml  2025-06-16T07-20-35.yaml  2025-06-16T07-20-44.yaml  2025-06-16T07-50-02.yaml  2025-06-18T05-52-38.yaml  2025-06-18T05-52-45.yaml  2025-06-18T05-53-32.yaml  2025-06-18T05-53-38.yaml  2025-06-18T05-54-11.yaml  2025-06-18T05-55-37.yaml  2025-06-18T05-55-54.yaml  2025-06-18T05-56-05.yaml  2025-06-18T05-56-19.yaml  2025-06-18T05-56-35.yaml  2025-06-18T06-03-39.yaml  2025-06-18T06-20-08.yaml  2025-06-18T06-21-51.yaml  2025-06-29T19-52-08.yaml  2025-06-29T19-52-14.yaml  2025-06-29T19-52-30.yaml  2025-08-20T05-14-10.yaml  2025-08-20T05-25-59.yaml  2025-08-20T05-49-15.yaml  2025-08-20T05-54-09.yaml  2025-08-20T05-56-26.yaml  2025-08-20T06-25-38.yaml  2025-08-30T17-25-06.yaml  2025-08-30T19-18-10.yaml
ask-shell/CHANGELOG/: index.html
ask-shell/ask_shell/: __init__.py  __main__.py  _constants.py  _run.py  _run_env.py  _run_env_test.py  ask.py  colors.py  conftest.py  console.py  global_callbacks.py  global_callbacks_test.py  interactive.py  interactive2.py  interactive2_test.py  interactive_rich.py  interactive_rich_test.py  interactive_test.py  models.py  models_test.py  printer.py  printer_test.py  public_api_test.py  rich_live.py  rich_live_callback.py  rich_live_callback_test.py  rich_live_state.py  rich_live_test.py  rich_progress.py  rich_progress_test.py  rich_run_state.py  rich_run_state_test.py  run.py  run_pool.py  run_pool_test.py  runner.py  settings.py  settings_test.py  shell.py  shell_events.py  (+2 more)
ask-shell/ask_shell/_internal/: _run.py  _run_env.py  _run_env_test.py  events.py  global_callbacks.py  global_callbacks_test.py  interactive.py  interactive_test.py  models.py  models_test.py  rich_live.py  rich_live_callback.py  rich_live_callback_test.py  rich_live_test.py  rich_progress.py  rich_progress_test.py  rich_run_state.py  rich_run_state_test.py  run_pool.py  run_pool_test.py  typer_command.py  typer_command_test.py
ask-shell/readme/: index.html
model-lib/: index.html  pyproject.toml  readme.md
model-lib/model_lib/: __init__.py  base_settings.py  conftest.py  constants.py  doctests_test.py  dump_functions.py  dump_functions_test.py  errors.py  metadata_dump_test.py  model_base.py  model_base_test.py  model_dump.py  model_dump_test.py  pydantic_utils.py  pydantic_utils_test.py  readme_example_test.py  static_settings.py
model-lib/model_lib/metadata/: __init__.py  context_dict.py  metadata_dump.py  metadata_fields.py
model-lib/model_lib/serialize/: __init__.py  base64_test.py  dump.py  dump_test.py  json_serialize.py  json_serialize_test.py  parse.py  toml_serialize.py  toml_serialize_test.py  yaml_serialize.py  yaml_test.py
model-lib/model_lib/serialize/toml_serialize_test/: test_toml_compact.toml  test_toml_normal.toml
model-lib/model_lib/serialize/yaml_test/: deployment.yaml  loadable_template.yaml
model-lib/readme/: index.html
pkg-ext/: example-project-config.toml  example-user-config.toml  index.html  pyproject.toml
pkg-ext/pkg_ext/: __main__.py  changelog_parser.py  changelog_test.py  cli.py  cli_test.py  commit_changelog.py  config.py  config_test.py  conftest.py  cov_reader.py  cov_reader_test.py  errors.py  file_parser.py  file_parser_test.py  gen_changelog.py  gen_changelog_md.py  gen_changelog_test.py  gen_group.py  gen_init.py  gen_pyproject_toml.py  gen_pyproject_toml_test.py  git_actions.py  git_state.py  git_state_test.py  git_url.py  interactive.py  interactive_choices.py  models.py  models_test.py  pkg_ext.py  pkg_ext_test.py  ref_added.py  ref_processor.py  ref_removed.py  settings.py  settings_test.py  version_bump.py  version_bump_test.py
pkg-ext/pkg_ext/changelog/: __init__.py  actions.py  actions_test.py  committer.py  markdown.py  parser.py  write_changelog_md.py
pkg-ext/pkg_ext/changelog_test/: test_dump_changelog_actions.yaml
pkg-ext/pkg_ext/cli/: __init__.py  commands.py  options.py  workflows.py
pkg-ext/pkg_ext/generation/: __init__.py  groups.py  init_file.py
pkg-ext/pkg_ext/git/: state.py
pkg-ext/pkg_ext/git_usage/: __init__.py  actions.py  state.py  url.py
pkg-ext/pkg_ext/interactive/: __init__.py  choices.py
pkg-ext/pkg_ext/models/: __init__.py  code_state.py  context.py  groups.py  pkg_state.py  py_files.py  py_symbols.py  ref_state.py  types.py
pkg-ext/pkg_ext/models_test/: test_public_groups_dumping.yaml
pkg-ext/pkg_ext/parsing/: __init__.py  file_parser_test.py
pkg-ext/pkg_ext/reference_handling/: __init__.py  added.py  removed.py
pkg-ext/pkg_ext/testdata/: coverage.xml  test_public_groups_add_to_existing_group.yaml  test_public_groups_dumping_after_new_ref_symbol.yaml
pkg-ext/pkg_ext/testdata/e2e/: .gitignore
pkg-ext/pkg_ext/testdata/e2e/01_initial/: .changelog.yaml  .groups.yaml  CHANGELOG.md
pkg-ext/pkg_ext/testdata/e2e/02_dep_order/: .changelog.yaml  .groups.yaml  CHANGELOG.md
pkg-ext/pkg_ext/testdata/e2e/03_nested/: .changelog.yaml  .groups.yaml  CHANGELOG.md
pkg-ext/pkg_ext/versioning/: __init__.py  bump.py
pkg-ext/readme/: index.html
zero-3rdparty/: index.html  pyproject.toml
zero-3rdparty/readme/: index.html
zero-3rdparty/zero_3rdparty/: __init__.py  cache_ttl.py  cache_ttl_test.py  closable_queue.py  closable_queue_test.py  dataclass_utils.py  datetime_utils.py  datetime_utils_test.py  decorator_globals.py  dependency.py  dependency_test.py  dict_nested.py  dict_utils.py  dict_utils_test.py  doctests_test.py  enum_utils.py  enum_utils_test.py  env_reader.py  env_temp.py  error.py  file_utils.py  file_utils_test.py  future.py  humps.py  iter_utils.py  logging_utils.py  logging_utils_test.py  object_name.py  object_name_test.py  str_utils.py  timeparse.py  type_dict.py  type_dict_test.py
(+277 files in other folders)
