[project]
name = "py-libs"
version = "1.0.0+rc1"
requires-python = ">=3.10"
dependencies = [
    "ask-shell",
    "model-lib[toml]",
    "zero-3rdparty",
]

[tool.uv]
package = false

[tool.uv.sources]
ask-shell = { workspace = true }
model-lib = { workspace = true }
zero-3rdparty = { workspace = true }

[tool.uv.workspace]
members = ["ask-shell", "model-lib", "zero-3rdparty"]
exclude=['model_lib', 'docker_example', 'compose_chart_export', 'docker_compose_parser']

[tool.pytest.ini_options]
addopts = "-s -vv --log-cli-level=INFO --ignore=.venv/* --ignore=.venv-ci/* --ignore=archive/* --capture=no --durations=0"
testpaths = ["ask-shell/ask_shell", "model-lib/model_lib", "zero-3rdparty/zero_3rdparty"]

[tool.coverage.report]
omit = ["*_test.py"]

[tool.pyright]
include = ["ask-shell", "model-lib", "zero-3rdparty"]
venvPath = ".venv"
exclude = [
    "zero-3rdparty/zero_3rdparty/humps.py",
    "zero-3rdparty/zero_3rdparty/timeparse.py",
]

[tool.ruff]
line-length = 88
target-version="py311"
show-fixes=true
exclude=["_pants", "compose_chart_export", "docker_compose_parser", "docker_example"]

[tool.ruff.lint]
extend-ignore=[ "E501", "UP006", "UP007", "UP035", "UP017"]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T']
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
isort = { known-first-party = ['tests'] }

[tool.ruff.lint.extend-per-file-ignores]
"model-lib/model_lib/__init__.py" = ["I001"]
"model-lib/model_lib/metadata/__init__.py" = ["I001"]
"scripts/*.py" = ["T201"]
"zero-3rdparty/zero_3rdparty/humps.py" = ["T201", "UP038"]

[dependency-groups]
dev = [
    "attrs>=24.3.0",
    "pytest>=8.3.4",
    "pytest-asyncio==0.15.1",
    "pytest-cov==3.0.0",
    "pytest-regressions==2.0.1",
    "pytest-subtests==0.5.0",
    "xdoctest==0.15.4",
    "pyright>=1.1.392.post0",
    "pytest-freezer>=0.4.9",
    "ruff>=0.9.2",
    "mkdocs-material>=9.5.50",
    "pillow>=11.1.0",
    "cairosvg>=2.7.1",
    "GitPython>=3.1.44"
]
