[project]
name = "py-libs"
version = "1.0.0+rc1"
requires-python = ">=3.10"
dependencies = [
    "ask-shell",
    "model-lib[toml]",
    "pkg-ext",
    "pytest-model-lib",
    "zero-3rdparty",
]

[tool.uv]
package = false

[tool.uv.sources]
ask-shell = { workspace = true }
model-lib = { workspace = true }
pkg-ext = {workspace = true }
pytest-model-lib = {workspace = true }
zero-3rdparty = { workspace = true }

[tool.uv.workspace]
members = ["ask-shell", "model-lib", "pkg-ext", "pytest-model-lib", "zero-3rdparty"]
exclude=['model_lib', 'docker_example', 'compose_chart_export', 'docker_compose_parser']

[tool.pytest.ini_options]
addopts = "-s -vv --log-cli-level=INFO --ignore=.venv/* --ignore=.venv-ci/* --ignore=archive/* --capture=no --durations=0 -n auto -p pytest_model_lib"
# addopts = "-s -vv --log-cli-level=INFO --ignore=.venv/* --ignore=.venv-ci/* --ignore=archive/* --capture=no"
testpaths = ["ask-shell/ask_shell", "model-lib/model_lib", "pkg-ext/pkg_ext", "zero-3rdparty/zero_3rdparty"]
filterwarnings =[
    "ignore::pytest.PytestRemovedIn9Warning"
]
[tool.coverage.report]
omit = ["*_test.py"]

[tool.pyright]
include = ["ask-shell", "model-lib", "pkg-ext", "zero-3rdparty"]
venvPath = ".venv"
exclude = [
    "zero-3rdparty/zero_3rdparty/humps.py",
    "zero-3rdparty/zero_3rdparty/timeparse.py",
    "pkg-ext/pkg_ext/testdata/",
]

[tool.ruff]
line-length = 88
target-version="py311"
show-fixes=true
exclude=["_pants", "compose_chart_export", "docker_compose_parser", "docker_example"]

[tool.ruff.lint]
extend-ignore=[ "E501", "UP006", "UP007", "UP035", "UP017"]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T']
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
isort = { known-first-party = ['tests'] }

[tool.ruff.lint.extend-per-file-ignores]
"model-lib/model_lib/__init__.py" = ["I001"]
"model-lib/model_lib/metadata/__init__.py" = ["I001"]
"scripts/*.py" = ["T201"]
"zero-3rdparty/zero_3rdparty/humps.py" = ["T201", "UP038"]

[dependency-groups]
dev = [
    "attrs>=24.3.0",
    "cairosvg>=2.7.1",
    "GitPython>=3.1.44",
    "mkdocs-material>=9.5.50",
    "pillow>=11.1.0",
    "pycobertura==4.0.0",
    "pyright>=1.1.404",
    "pytest-asyncio==0.15.1",
    "pytest-cov==3.0.0",
    "pytest-freezer>=0.4.9",
    "pytest-model-lib",
    "pytest-regressions==2.0.1",
    "pytest-subtests==0.5.0",
    "pytest-xdist==3.8.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "ssort==0.15.0",
    "xdoctest==0.15.4",
]
