[project]
name = "ask-shell"
version = "1.0.0+rc1"
requires-python = ">=3.10"
dependencies = [
  "questionary==2.1.0",
  "rich==13.9.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "ask_shell/*.py",
]
exclude = [
  "*_test.py",
  "conftest.py",
  "test_*.json",
]
