[project]
name = "ask-shell"
version = "0.0.3"
requires-python = ">=3.10"
dependencies = [
  "model-lib[toml]",
  "zero-3rdparty",
  "questionary>=2.1.0",
  "rich>=13.9.4",
  "typer>=0.16.0"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "ask_shell/*.py",
]
exclude = [
  "*_test.py",
  "conftest.py",
  "test_*.json",
]
