[project]
name = "ask-shell"
version = "0.2.1"
requires-python = ">=3.10"
readme = "readme.md"
dependencies = [
  "model-lib[toml]",
  "zero-3rdparty",
  "questionary>=2.1.0",
  "rich>=13.9.4",
  "typer>=0.16.0",
]

[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "ask_shell/*.py",
]
exclude = [
  "*_test.py",
  "conftest.py",
  "test_*.json",
]

[tool.pkg-ext]
tag_prefix = "a"
after_file_write_hooks = [
  "just fmt",
]
