[project]
name = "model-lib"
version = "1.0.0+rc1"
requires-python = ">=3.10"
dependencies = [
    # "zero-3rdparty",
    "pydantic>=2.10.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "model_lib/*.py",
]
exclude = [
  "*_test.py",
  "conftest.py",
  "test_*.json",
  "_test/*.json",
  "test_*.yaml",
  "_test/*.yaml",
]
