[project]
name = "model-lib"
version = "1.0.0b1"
requires-python = ">=3.10"
dependencies = [
  "pydantic~=2.10.4",
  "pydantic-settings~=2.7.1",
  "pyyaml>=6.0.2",
  "zero-3rdparty",
]
readme = "readme.md"
license = "MIT"
keywords = []
authors = [{ name = "EspenAlbert", email = "espen.albert1@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
toml = ["pydantic~=2.10.4", "pydantic-settings~=2.7.1", "tomli-w~=1.1.0", "zero-3rdparty"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["model_lib/*.py", "model_lib/**/*.py"]
exclude = [
  "*_test.py",
  "conftest.py",
  "test_*.json",
  "_test/*.json",
  "test_*.yaml",
  "_test/*.yaml",
]
