[project]
name = "zero-3rdparty"
version = "1.0.0b1"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "readme.md"
license = "MIT"
keywords = []
authors = [{ name = "EspenAlbert", email = "espen.albert1@gmail.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "zero_3rdparty/*.py",
]
exclude = [
  "*_test.py",
  "conftest.py",
  "test_*.json",
]
